<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="help">Help</string>
    <string name="reset_message">Reset all entries to default?</string>
    <string name="attention">Attention</string>
    <string name="enabled">Enabled</string>
    <string name="default_string">Default</string>
    <string name="add">Add</string>
    <string name="reset_paranoid">Tesla</string>
    <string name="reset_android">Android</string>
    <string name="system_category">System</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="statusbar_category">Status Bar</string>
    <string name="navigation_category">Navigation</string>
    <string name="multitasking_category">Multi-Tasking</string>
    <string name="weather_cat_lockscreen">Lockscreen</string>
    <string name="lockscreen_extra_category">Lockscreen Extras</string>
    <string name="button_settings">Button settings</string>
    <string name="quicksettings_category">Quick settings</string>
    <string name="traffic_category">Traffic indicators</string>
    <string name="statusbar_notifications_category">Notifications</string>
    <string name="statusbar_items_category">Statusbar items</string>
    <string name="recents_category">Recents</string>
    <string name="other_settings">Others</string>
    <string name="headset_settings">Headset</string>
    <string name="omniswitch_category">OmniSwitch</string>
    <string name="teslacoil_summary_title">Customize your device</string>
    <string name="teslacoil_dialog_title">Coming Soon!!</string>
    <string name="teslacoil_dialog_message">Under Construction</string>
    <string name="teslacoil_dialog_toast">READ!</string>
    <string name="immersive_recents_title">Immersive Recents</string>
    <string name="immersive_recents_summary">Change the view of the recents screen</string>
    <string name="immersive_recents_dialog_title">Select recents view</string>
    <string name="immersive_recents_default">Default</string>
    <string name="immersive_recents_fullscreen">Fullscreen</string>
    <string name="immersive_recents_statusbar">Statusbar only</string>
    <string name="immersive_recents_navbar">Navbar only</string>
    <string name="powermenu_category">Power Menu</string>
    <string name="powermenu_screenshot">Screenshot</string>
    <string name="powermenu_screenrecord">Screen Record</string>
    <string name="powermenu_power">Power</string>
    <string name="powermenu_reboot">Reboot</string>
    <string name="powermenu_airplane">Airplane</string>
    <string name="powermenu_settings">Settings</string>
    <string name="powermenu_lockdown">Lock Down</string>
    <string name="powermenu_soundpanel">Sound Panel</string>
    <string name="powermenu_dialog_dim">Dialog dim background amount</string>
    <string name="power_menu_animation_title">Power menu animation</string>
    <string name="power_menu_animation_summary">Change the enter/exit animation of the power menu</string>
    <string name="power_menu_animation_dialog_title">Select power menu animation</string>
    <string name="power_menu_animation_aosp">AOSP (default)</string>
    <string name="power_menu_animation_bottom">Bottom</string>
    <string name="power_menu_animation_top">Top</string>
    <string name="advanced_reboot_title">Advanced reboot</string>
    <string name="advanced_reboot_summary">Include options in the power menu for rebooting into recovery and bootloader</string>
    <string name="advanced_reboot_dialog_title">Advanced reboot menu</string>
    <string name="advanced_reboot_disabled">Disable</string>
    <string name="advanced_reboot_hide_on_keyguard">Hide on lock screen</string>
    <string name="advanced_reboot_show_always">Show always</string>
    <string name="swap_volume_buttons_title">Reorient</string>
    <string name="swap_volume_buttons_summary">Swap volume buttons when the screen is rotated</string>
    <string name="home_button_wake_title">Home button wake</string>
    <string name="home_button_wake_summary">Pressing the home button will wake your device</string>
    <string name="volume_rocker_wake_title">Volume rocker wake</string>
    <string name="volume_rocker_wake_summary">Pressing the volume keys will wake your device</string>
    <string name="volume_rocker_music_controls_title">Playback control</string>
    <string name="volume_rocker_music_controls_summary">When the screen is off, long-pressing the volume keys will seek music tracks</string>
    <string name="volume_keys_control_media_stream_title">Volume keys control media volume</string>
    <string name="volume_keys_control_media_stream_summary">Force volume keys to control media stream</string>
    <string name="status_bar_clock_title">Clock settings</string>
    <string name="status_bar_clock_style_title">Clock style</string>
    <string name="status_bar_clock_style_right">Right</string>
    <string name="status_bar_clock_style_left">Left</string>
    <string name="status_bar_clock_style_center">Center</string>
    <string name="status_bar_clock_style_hidden">Hidden</string>
    <string name="status_bar_am_pm_title">AM/PM style</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="status_bar_am_pm_normal">Normal</string>
    <string name="status_bar_am_pm_small">Small</string>
    <string name="status_bar_am_pm_hidden">Hidden (default)</string>
    <string name="clock_date_display">Date</string>
    <string name="clock_date_display_summary">Display custom date before the clock</string>
    <string name="clock_date_display_none">Don\'t show</string>
    <string name="clock_date_display_small">Small font size</string>
    <string name="clock_date_display_normal">Normal font size</string>
    <string name="clock_date_style">Date style</string>
    <string name="clock_date_style_normal">Normal</string>
    <string name="clock_date_style_lowercase">Lowercase</string>
    <string name="clock_date_style_uppercase">Uppercase</string>
    <string name="clock_date_format_custom">Custom java format</string>
    <string name="clock_date_format">Date format</string>
    <string name="clock_date_string_edittext_title">Must be in DateFormat eg. MM/dd/yy</string>
    <string name="clock_date_string_edittext_summary">Enter string</string>
    <string name="clock_date_position">Date position</string>
    <string name="clock_date_right">Right of time</string>
    <string name="clock_date_left">Left of time</string>
    <string name="status_bar_show_clock_second_title">Clock seconds</string>
    <string name="clock_font_style_title">Clock font style</string>
    <string name="clock_font_normal">Normal</string>
    <string name="clock_font_italic">Italic</string>
    <string name="clock_font_bold">Bold</string>
    <string name="clock_font_bold_italic">Bold Italic</string>
    <string name="clock_font_light">Light</string>
    <string name="clock_font_light_italic">Light Italic</string>
    <string name="clock_font_thin">Thin</string>
    <string name="clock_font_thin_italic">Thin Italic</string>
    <string name="clock_font_condensed">Condensed</string>
    <string name="clock_font_condensed_italic">Condensed Italic</string>
    <string name="clock_font_condensed_bold">Condensed Bold</string>
    <string name="clock_font_condensed_bold_italic">Condensed Bold Italic</string>
    <string name="clock_font_medium">Medium</string>
    <string name="clock_font_medium_italic">Medium Italic</string>
    <string name="clock_font_size_title">Font size</string>
    <string name="quicksettings_tiles_category">Tile animation options</string>
    <string name="qs_tile_animation_style_title">Tiles animation style</string>
    <string name="qs_tile_animation_duration_title">Tiles animation duration</string>
    <string name="qs_tile_animation_interpolator_title">Tiles animation interpolator</string>
    <string name="qs_tile_animation_style_off">No animation</string>
    <string name="qs_tile_animation_style_flip">Flip</string>
    <string name="qs_tile_animation_style_rotate">Rotate</string>
    <string name="qs_tile_animation_duration_low">Low</string>
    <string name="qs_tile_animation_duration_default">Default</string>
    <string name="quick_pulldown_title">Quick pulldown</string>
    <string name="qs_brightness_slider_title">Brightness slider</string>
    <string name="qs_brightness_slider_summary">Show a brightness slider in the quick settings panel</string>
    <string name="brightness_icon_title">Brightness icon </string>
    <string name="brightness_icon_summary">Show a brightness icon to the left of the brighness slider to adjust auto-brightness</string>
    <string name="qs_tile_title_visibility_title">QS tile titles</string>
    <string name="qs_tile_title_visibility_summary_on">QS tiles titles are now visible</string>
    <string name="qs_tile_title_visibility_summary_off">QS tiles titles are now gone</string>
    <string name="lockscreen_targets_title">Bottom L/R Shortcuts</string>
    <string name="lockscreen_weather_title">Weather</string>
    <string name="carrier_label_settings_title">Carrier Label</string>
    <string name="screenshot_type_category">Screenshot</string>
    <string name="status_bar_toggle_brightness">Brightness control</string>
    <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across the status bar</string>
    <string name="tap_to_sleep_category">Tap to Sleep</string>
    <string name="double_tap_to_sleep_title">Double-tap to sleep</string>
    <string name="double_tap_to_sleep_summary">Double tap on the status bar to put the device to sleep</string>
    <string name="tap_to_sleep_lockscreen_category">Tap to Sleep on Lockscreen</string>
    <string name="status_bar_battery_style_category">Battery</string>
    <string name="lockscreen_battery_category">Lockscreen Battery</string>
    <string name="qs_header_title">Header</string>
    <string name="qs_settings_icon_title">Settings Shortcut</string>
    <string name="qs_settings_icon_summary">Enable the settings shortcut in the header</string>
    <string name="qs_settings_expanded_title">Settings Shortcut Expanded</string>
    <string name="qs_settings_expanded_summary">Only enable the settings shortcut when expanded</string>
    <string name="qs_edit_title">Edit Icon</string>
    <string name="qs_edit_summary">Enable the tile edit icon in the header</string>
    <string name="qs_multiuser_switch_title">MultiUser Switch</string>
    <string name="qs_multiuser_switch_summary">Enable the MultiUser switch in the header</string>
    <string name="qs_expand_indicator_title">Expand Indicator</string>
    <string name="qs_expand_indicator_summary">Enable the expand indicator (^) in the header</string>
    <string name="qs_date_time_center_title">Center Date and Time</string>
    <string name="qs_date_time_center_summary">Requires one or more icons to be disabled</string>
    <string name="weather_category">Weather Settings</string>
    <string name="gesture_anywhere_title">Gesture Anywhere</string>
    <string name="app_circle_bar_title">App circle bar</string>
    <string name="status_bar_custom_header_title">Custom header image</string>
    <string name="status_bar_custom_header_summary">Enable notification panel header image</string>
    <string name="daylight_header_pack_title">Header image pack</string>
    <string name="status_bar_custom_header_shadow_title">Header image shadow</string>
    <string name="status_bar_custom_header_shadow_summary">For better visibility on bright images</string>
    <string name="custom_header_provider_title">Header provider</string>
    <string name="custom_header_browse_title">Browse installed headers</string>
    <string name="custom_header_browse_summary">Long press on any image to use for static mode</string>
</resources>