<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2014-2016 The Dirty Unicorns Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/statusbar_category"
    android:layout="@layout/tab"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <PreferenceScreen
        android:key="statusbarclock"
        android:fragment="com.gzr.teslacoil.fragments.StatusBarClock"
        android:title="@string/status_bar_clock_title"
        android:layout="@layout/preference_statusbarclock" />

    <PreferenceScreen
        android:key="status_bar_battery_style"
        android:title="@string/status_bar_battery_style_category"
        android:layout="@layout/preference_statusbar_battery_style"
        android:fragment="com.gzr.teslacoil.fragments.StatusbarBatteryStyle" />

    <Preference
        android:key="statusbar_weather"
        android:title="@string/weather_category"
        android:layout="@layout/preference_weather"
        android:fragment="com.gzr.teslacoil.fragments.StatusBarWeather" />

    <PreferenceScreen
        android:key="quicksettings"
        android:fragment="com.gzr.teslacoil.fragments.QuickSettings"
        android:layout="@layout/preference_systemui_tuner_qs"
        android:title="@string/quicksettings_category" />

     <PreferenceScreen
        android:key="traffic"
        android:fragment="com.gzr.teslacoil.fragments.Traffic"
        android:layout="@layout/preference_traffic"
        android:title="@string/traffic_category" />

     <PreferenceScreen
        android:key="systemui_tuner_statusbar"
        android:title="@string/statusbar_items_category"
        android:layout="@layout/preference_systemui_tuner_statusbaritems" >
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.android.systemui"
            android:targetClass="com.android.systemui.tuner.TunerActivity" />
     </PreferenceScreen>

     <PreferenceScreen
        android:key="statusbar_notifications"
        android:fragment="com.gzr.teslacoil.fragments.StatusbarNotifications"
        android:layout="@layout/preference_statusbar_notifications"
        android:title="@string/statusbar_notifications_category" />

     <PreferenceScreen
        android:key="carrier_label_settings"
        android:fragment="com.gzr.teslacoil.fragments.CarrierLabelSettings"
        android:layout="@layout/preference_carrier_label"
        android:title="@string/carrier_label_settings_title" />

     <PreferenceScreen
        android:key="tap_to_sleep"
        android:fragment="com.gzr.teslacoil.fragments.TaptoSleep"
        android:layout="@layout/preference_tap_to_sleep"
        android:title="@string/tap_to_sleep_category" />

</PreferenceScreen>
