<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2014-2016 The Dirty Unicorns Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/multitasking_category" >

    <PreferenceScreen
            android:key="screenshot_type"
            android:title="@string/screenshot_type_category"
            android:fragment="com.gzr.teslacoil.fragments.Screenshot"
            android:layout="@layout/preference_screenshot"/>

    <PreferenceScreen
            android:key="omniswitch"
            android:layout="@layout/preference_omniswitch"
            android:title="@string/omniswitch_category" >
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="org.omnirom.omniswitch"
                android:targetClass="org.omnirom.omniswitch.SettingsActivity" />
    </PreferenceScreen>

    <PreferenceScreen
            android:key="recents"
            android:fragment="com.gzr.teslacoil.fragments.Recents"
            android:layout="@layout/preference_recents"
            android:title="@string/recents_category" />

    <PreferenceScreen
            android:key="gesture_anywhere"
            android:fragment="com.gzr.teslacoil.gestureanywhere.GestureAnywhereSettings"
            android:layout="@layout/preference_gesture"
            android:title="@string/gesture_anywhere_title" />

    <PreferenceScreen
            android:key="app_circle_bar"
            android:fragment="com.gzr.teslacoil.fragments.AppCircleBar"
            android:layout="@layout/preference_appbar"
            android:title="@string/app_circle_bar_title" />

</PreferenceScreen>

